created todont input page

--- a/styles/style.css
+++ b/styles/style.css
@@ -111,3 +111,13 @@ footer {
     }
 
   }
+#to-do-input{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+
+.hidden{
+    display: none;
+}
